Add link to readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>John Schoeman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,19 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<header>
+								<h1>John Schoeman</h1>
+								<p>Software Engineer Specializing in Web Developement</p>
+							</header>
+							<p class="major">
+								I’m a software engineer based out of San Francisco.  
+							<br/>
+								This is my personal portfolio.
+							</p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Get My Resume</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">See My Github</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Hire Me</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -30,11 +39,20 @@
 						</div>
 					</section>
 
+				<!-- One Point Five -->
+					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Portfolio Spotlight</h2>
+						</div>
+					</section>
+
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Spot Me Mobile</h2>
+							<p>
+								A react native mobile application.
+							</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -47,10 +65,12 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Mirror Prime Tree</h2>
+							<p>
+
+							</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Visit the Live Site</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -61,10 +81,12 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Product Hunt App</h2>
+							<p>
+
+							</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Visit The Live Site</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -75,8 +97,10 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Coding Hightlights</h2>
+							<p>
+								a section for various coding highlights
+							</p>
 						</div>
 
 						<!-- Gallery -->
@@ -165,66 +189,6 @@
 										</ul>
 									</div>
 								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
 							</div>
 
 					</section>
@@ -232,13 +196,17 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Skill Set</h2>
+							<p>
+								My ever expanding skill set includes the following languages, frameworks, and technologies
+							</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Ruby</h3>
+									<p>
+										Some blurb on the ruby programming language
+									</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
@@ -300,6 +268,33 @@
 					</section>
 
 				<!-- Seven -->
+
+				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<header>
+								<h1>
+									My Background:
+								</h1>
+								<p>
+									Structural Engineer Turned Software Engineer.
+								</p>
+							</header>
+							<p>
+								My approach to writing software is same as my approach to life: Red Green Refactor.  I like testing new ideas, iterating until my goals are surpassed and then making those solutions beautiful. 
+								<br/><br/>
+								My background is in structural engineering where I was responsible for the design structural solutions for mid to high rise buildings.  The design industry is also where I started my career in software development.  By writing and improving software that was used by a 200 person structural engineering firm I was able to automate the design of structural members and connections used in multi-billion dollar projects.  I have since switched fully into the software development space, further pursuing my interests in the engaging and sophisticated design challenges that are often presented to us involved in software.
+								<br/><br/>
+								Most recently I have been diving deep into web based technologies, including Ruby on Rails, ReactJS and GraphQL.  I have contributed to successful projects built in both mobile and desktop environments.
+							</p>
+							<p class="major">		
+							</p>
+						</div>
+						<div class="image">
+							<img src="images/banner.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
