--- a/index.html
+++ b/index.html
@@ -17,84 +17,94 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<header>
 								<h1>John Schoeman</h1>
-								<p>Software Engineer Specializing in Web Developement</p>
+								<p>Software Engineer</p>
 							</header>
 							<p class="major">
-								I’m a software engineer based out of San Francisco.  
+								I’m a software engineer based out of Boston.  
 							<br/>
 								This is my personal portfolio.
 							</p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get My Resume</a></li>
-								<li><a href="#first" class="button big wide smooth-scroll-middle">See My Github</a></li>
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Hire Me</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="https://github.com/johnschoeman" class="button big wide smooth-scroll-middle">Github</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/mirror_fractal04.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- One Point Five -->
-					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Portfolio Spotlight</h2>
 						</div>
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
-						<div class="content">
-							<h2>Spot Me Mobile</h2>
-							<p>
-								A react native mobile application.
-							</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Mirror Prime Tree</h2>
-							<p>
-
-							</p>
-							<ul class="actions vertical">
-								<li><a href="#" class="button">Visit the Live Site</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style6 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Product Hunt App</h2>
 							<p>
-
+								A fullstack web application.
+							</p>
+							<p>
+								Technologies: ReactJS, Redux, Rails, PostgreSQL
 							</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Visit The Live Site</a></li>
+								<li><a href="https://productjadt.herokuapp.com/#/" class="button">Visit The Live Site</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/product_hunt.jpg" alt="" />
+						</div>
+					</section>
+				
+				<!-- Three -->
+				<section class="spotlight style3 orient-left content-align-right image-position-center onscroll-image-fade-in" id="first">
+					<div class="content">
+						<h2>Spot Me Mobile</h2>
+						<p>
+							A react native mobile application.
+						</p>
+						<p>
+							Technologies: React Native, GraphQL, Apollo Client, Rails, PostgreSQL
+						</p>
+						<ul class="actions vertical">
+							<li><a href="https://aldahir15.github.io/SpotMeApp/" class="button">Learn More</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="https://res.cloudinary.com/dekgrddbo/image/upload/v1508129127/spot_me/reserve_spot_4.gif" alt="" />
+					</div>
+				</section>
+
+				<!-- Four -->
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Mirror Prime Tree</h2>
+							<p>
+								A vanilla JavaScript data visualizer.
+							</p>
+							<p>
+								Technologies: JavaScript, Canvas
+							</p>
+							<ul class="actions vertical">
+								<li><a href="https://johnschoeman.github.io/mirror-prime-tree/" class="button">Visit the Live Site</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="gifs/mirror_prime_orig.gif" alt="" />
 						</div>
 					</section>
 
-				<!-- Five -->
+
+
+				<!-- Five
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Coding Hightlights</h2>
@@ -103,7 +113,6 @@
 							</p>
 						</div>
 
-						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
@@ -191,7 +200,7 @@
 								</article>
 							</div>
 
-					</section>
+					</section> -->
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
@@ -210,52 +219,52 @@
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
+									<h3>Rails</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
+									<h3>JavaScript</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
+									<h3>ReactJS</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
-									<h3>Magna</h3>
+									<h3>Redux</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
+									<h3>GraphQL</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
+									<h3>Apollo Client</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-refresh"></span>
-									<h3>Elit</h3>
+									<h3>SQL</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
+									<h3>Git</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
+									<h3>HTML5</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
+									<h3>CSS3</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
@@ -268,33 +277,6 @@
 					</section>
 
 				<!-- Seven -->
-
-				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<header>
-								<h1>
-									My Background:
-								</h1>
-								<p>
-									Structural Engineer Turned Software Engineer.
-								</p>
-							</header>
-							<p>
-								My approach to writing software is same as my approach to life: Red Green Refactor.  I like testing new ideas, iterating until my goals are surpassed and then making those solutions beautiful. 
-								<br/><br/>
-								My background is in structural engineering where I was responsible for the design structural solutions for mid to high rise buildings.  The design industry is also where I started my career in software development.  By writing and improving software that was used by a 200 person structural engineering firm I was able to automate the design of structural members and connections used in multi-billion dollar projects.  I have since switched fully into the software development space, further pursuing my interests in the engaging and sophisticated design challenges that are often presented to us involved in software.
-								<br/><br/>
-								Most recently I have been diving deep into web based technologies, including Ruby on Rails, ReactJS and GraphQL.  I have contributed to successful projects built in both mobile and desktop environments.
-							</p>
-							<p class="major">		
-							</p>
-						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
@@ -323,9 +305,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
