Update skills text

--- a/index.html
+++ b/index.html
@@ -38,6 +38,58 @@
 						</div>
 					</section>
 
+				<!-- Six -->
+				<section class="wrapper style1 align-center">
+					<div class="inner">
+						<h2>Skill Set</h2>
+						<p>
+							My ever expanding skill set includes the following languages, frameworks, and technologies
+						</p>
+						<div class="items style1 medium onscroll-fade-in">
+							<section>
+								<span class="icon style2 major fa-save"></span>
+								<h3>Ruby on Rails</h3>
+								<p>I have experience with </p>
+							</section>
+							<section>
+								<span class="icon style2 major fa-bar-chart"></span>
+								<h3>JavaScript</h3>
+								<p>
+
+								</p>
+							</section>
+							<section>
+								<span class="icon style2 major fa-wifi"></span>
+								<h3>React/Redux</h3>
+								<p>
+
+								</p>
+							</section>
+							<section>
+								<span class="icon style2 major fa-paper-plane"></span>
+								<h3>GraphQL</h3>
+								<p>
+									I have experience building applications using graphQL as the application data layer.  I can build both graphQL based backend web servers and abstracted network interfaces to interact with graphQL endpoints on the frontend.
+								</p>
+							</section>
+							<section>
+								<span class="icon style2 major fa-refresh"></span>
+								<h3>SQL</h3>
+								<p>
+
+								</p>
+							</section>
+							<section>
+								<span class="icon style2 major fa-hashtag"></span>
+								<h3>Git</h3>
+								<p>
+									
+								</p>
+							</section>
+						</div>
+					</div>
+				</section>
+
 				<!-- One Point Five -->
 					<section class="spotlight style1 content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
@@ -201,80 +253,6 @@
 							</div>
 
 					</section> -->
-
-				<!-- Six -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Skill Set</h2>
-							<p>
-								My ever expanding skill set includes the following languages, frameworks, and technologies
-							</p>
-							<div class="items style1 medium onscroll-fade-in">
-								<section>
-									<span class="icon style2 major fa-diamond"></span>
-									<h3>Ruby</h3>
-									<p>
-										Some blurb on the ruby programming language
-									</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-save"></span>
-									<h3>Rails</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>JavaScript</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-wifi"></span>
-									<h3>ReactJS</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-cog"></span>
-									<h3>Redux</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>GraphQL</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Apollo Client</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-refresh"></span>
-									<h3>SQL</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-hashtag"></span>
-									<h3>Git</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-bolt"></span>
-									<h3>HTML5</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-envelope"></span>
-									<h3>CSS3</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-							</div>
-						</div>
-					</section>
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
