--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								This is my personal portfolio.
 							</p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="./john_schoeman_resume.pdf" class="button big wide smooth-scroll-middle">Resume</a></li>
 								<li><a href="https://github.com/johnschoeman" class="button big wide smooth-scroll-middle">Github</a></li>
 							</ul>
 						</div>
@@ -49,20 +49,22 @@
 							<section>
 								<span class="icon style2 major fa-save"></span>
 								<h3>Ruby on Rails</h3>
-								<p>I have experience with </p>
+								<p>
+									I have experience building full stack web applications with backends built using the Ruby on Rails framework.
+								</p>
 							</section>
 							<section>
 								<span class="icon style2 major fa-bar-chart"></span>
 								<h3>JavaScript</h3>
 								<p>
-
+									I have used JavaScript to build interactive application frontends and am familiar with ES6 features.
 								</p>
 							</section>
 							<section>
 								<span class="icon style2 major fa-wifi"></span>
 								<h3>React/Redux</h3>
 								<p>
-
+									I am familar with component based UI's and using flux architecture to efficiently manage application state.
 								</p>
 							</section>
 							<section>
@@ -76,14 +78,14 @@
 								<span class="icon style2 major fa-refresh"></span>
 								<h3>SQL</h3>
 								<p>
-
+									I am familar with making SQL queries and interacting with SQL based databases such as PostgreSQL.
 								</p>
 							</section>
 							<section>
 								<span class="icon style2 major fa-hashtag"></span>
 								<h3>Git</h3>
 								<p>
-									
+									I am familiar with the git version controll system and workflow.
 								</p>
 							</section>
 						</div>
@@ -255,7 +257,7 @@
 					</section> -->
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<!-- <section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
@@ -277,7 +279,7 @@
 							</form>
 
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
