Add footer links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<span class="icon style2 major fa-hashtag"></span>
 								<h3>Git</h3>
 								<p>
-									I am familiar with the git version controll system and workflow.
+									I am familiar with the git version control system and workflow.  I have collaborated with other engineers through github and have reviewed pull requests.
 								</p>
 							</section>
 						</div>
@@ -285,9 +285,9 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/johnschoeman" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/john-schoeman-eit-36894658/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li> -->
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
